# Todo-app

./: .gitignore  QUICKSTART.txt  README.md  demo_session.py  pyproject.toml  run.py  test_manual.py
.specify/memory/: constitution.md
history/prompts/001-phase-i-in-memory/: 0001-create-phase-i-specification.spec.prompt.md  0002-create-phase-i-implementation-plan.plan.prompt.md  0003-generate-implementation-tasks.tasks.prompt.md  0004-implement-phase-i-todo-console.green.prompt.md
history/prompts/constitution/: 0001-establish-global-constitution-evolution-todo.constitution.prompt.md
specs/001-phase-i-in-memory/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase-i-in-memory/checklists/: requirements.md
specs/001-phase-i-in-memory/contracts/: cli-menu.md
src/: __init__.py  __main__.py
src/application/: __init__.py  storage.py  use_cases.py
src/domain/: __init__.py  exceptions.py  task.py
src/infrastructure/: __init__.py  memory_storage.py
src/interface/: __init__.py  cli.py  main.py
tests/: __init__.py
tests/contract/: __init__.py
tests/integration/: __init__.py
